--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.1",
     "node-sass": "^9.0.0",
+    "pg": "^8.11.1",
+    "pg-hstore": "^2.3.4",
     "pinia": "^2.1.4",
+    "sequelize": "^6.32.1",
     "uuid": "^9.0.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "sass": "^1.63.6",
+    "sequelize-cli": "^6.6.1",
     "vite": "^4.4.0"
   }
 }
